# shell-ai

./: .gitignore  DOCUMENTATION_REVIEW.md  Dockerfile  Dockerfile.bash  Dockerfile.zsh  LICENSE  Makefile  README.md  install.sh
config/: ai-config.example.json  bashrc-ai.sh  tmux.conf  zshrc-ai.sh
docs/: USAGE.md
providers/: anthropic.sh  google.sh  ollama.sh  openai.sh
scripts/: ai-copy.sh  ai-setup.sh  ai-shell.sh  tmux-ai-pane.sh  welcome.sh
tests/: README_INSTALLATION_TESTS.md  test_ai_history_functions.sh  test_ai_shell.sh  test_command_extraction.sh  test_config_management.sh  test_installation.sh  test_prefix_handling.sh  test_runner.sh  test_tmux_integration.sh  test_tmux_selector.sh  test_tmux_selector_go.sh  test_tmux_selector_rust.sh
tmux-selector/: .gitignore  Cargo.toml  README.md
tmux-selector-go/: .gitignore  README.md  go.mod  main.go
tmux-selector-rust/: README.md
tmux-selector/src/: main.rs
