[package]
name = "tmux-selector"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tmux-selector"
path = "src/main.rs"

[dependencies]
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true 